// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBarButtonsMenu renders CommandBarButtonsMenu 1`] = `
<DocumentFragment>
  <mock-tooltip
    content="More actions"
    relationship="label"
  >
    <mock-menu
      open="false"
    >
      <mock-menutrigger
        disablebuttonenhancement="true"
      >
        <mock-menubutton
          appearance="transparent"
          aria-label="More actions"
          classname="commandBarButtonsMenuButton"
          icon="[object Object]"
        />
      </mock-menutrigger>
      <mock-menupopover
        style="border-radius: unset !important;"
      >
        <mock-menulist
          classname="menuList"
        >
          <span>
            Save assessment button
          </span>
          <span>
            Load assessment button
          </span>
          <span>
            Transfer to assessment button
          </span>
          <span />
        </mock-menulist>
      </mock-menupopover>
    </mock-menu>
  </mock-tooltip>
</DocumentFragment>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render export report menuitem 1`] = `
<span>
  Report export button
</span>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render load assessment menuitem 1`] = `
<span>
  Load assessment button
</span>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render save assessment menuitem 1`] = `
<span>
  Save assessment button
</span>
`;

exports[`CommandBarButtonsMenu renders all child buttons with hasSubMenu false,: render transfer to assessment menuitem 1`] = `
<span>
  Transfer to assessment button
</span>
`;
